--- a/package.json
+++ b/package.json
@@ -39,6 +39,14 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^13.17.0"
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@cypress/vite-dev-server": "^6.0.3",
+    "@cypress/webpack-dev-server": "^4.0.2",
+    "babel-loader": "^9.2.1",
+    "cypress": "^14.2.1",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
